--- a/templates/email/password_reset.html
+++ b/templates/email/password_reset.html
@@ -25,7 +25,6 @@
             padding: 0.75em 1.5em;
             background-color: #2f3dde;
             color: #ffffff !important;
-            font-size: 16px;
             font-weight: bold;
             text-decoration: none;
             border-radius: 30px;
@@ -35,7 +34,7 @@
         }
         img {
             width: 150px;
-            margin-bottom: 15px;
+            margin-top: 15px;
         }
     </style>
 </head>
@@ -43,24 +42,27 @@
 <body>
 <div class="container">
     <div class="box">
-        <img src="cid:{{ logo_cid }}" alt="Videoflix Logo">
-
-        <p>Dear <span style="color: #2f3dde;">{{ user_name }}</span>,</p>
+        <p>Hello,</p>
 
         <p>
-            Thank you for registering with <span style="color: #2f3dde;">Videoflix.</span>
-            To complete your registration and verify your email address, please click the link below:
+            We recently received a request to reset your password. If you made this request, 
+            please click on the following link to reset your password:
         </p>
 
         <div style="text-align:left">
-            <a href="{{ activation_link }}" class="button">Activate account</a>
+            <a href="{{ activation_link }}" class="button">Reset password</a>
         </div>
 
         <p>
-            If you did not create an account with us, please disregard this email.<br/><br/>
-            Best regards,<br/><br>
-            Your Videoflix Team
+            Please note that for security reasons, this link is only valid for 24 hours.<br/><br>
+            If you did not request a password reset, please ignore this email.<br/><br>
+            Best regards,<br><br>
+            Your Videoflix team!
         </p>
+
+        <div style="text-align:left">
+            <img src="cid:{{ logo_cid }}" alt="Videoflix Logo">
+        </div>
     </div>
 </div>
 </body>
